<resources>
    <string name="app_name">QCM</string>

    <string name="button">Se connecter</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_score">Scores</string>
    <string name="menu_friends">Friends</string>

    <string name="buttonLogin">Se connecter</string>
    <string name="buttonCreateAccount">Créer un compte</string>

    <string name="mot_de_passe">Mot de passe</string>
    <string name="identifiant">Identifiant</string>


    <string name="joueur2">Joe Biden</string>
    <string name="joueur1">Donald Trump</string>
    <string name="scorej1">0</string>
    <string name="scorej2">0</string>
    <string name="question">Superbe question</string>
    <string name="reponse1">Réponse A</string>
    <string name="reponse2">Réponse B</string>
    <string name="reponse3">Réponse C</string>
    <string name="reponse4">Réponse D</string>
    <string name="timer">30</string>
    <string name="temps_restant">Temps Restant</string>
    <string name="placeHolderScore">Jouez une partie pour voir votre score ici !</string>
    <string name="disconnect">Se déconnecter</string>

</resources>