<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.lpiot.qcm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="fr.lpiot.qcm.ui.gallery.ScoreFragment"
        android:label="@string/menu_score"
        tools:layout="@layout/fragment_score" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="fr.lpiot.qcm.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_slideshow" />
</navigation>