<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonCreerNouvelUtilisateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="buttonClickNaviguerNouvelUtilisateur"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/cadenas">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginLeft="50dp"
        android:text="@string/identifiant"

        >

    </TextView>

    <EditText

        android:id="@+id/identifiant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:inputType="text" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginLeft="50dp"
        android:text="@string/mot_de_passe" />

    <EditText

        android:id="@+id/mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bouton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        android:onClick="buttonLoginClick"
        android:text="@string/buttonLogin">

    </Button>


</LinearLayout>